--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
+    "module": "CommonJS",
+    "esModuleInterop": true,
     "target": "esnext",
     "types": [],
     // For nodejs:
@@ -34,11 +35,6 @@
 
     // Recommended Options
     "strict": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
-    "skipLibCheck": true,
+   
   }
 }
